--- a/internal/service/assets/templates/index.gohtml
+++ b/internal/service/assets/templates/index.gohtml
@@ -7,6 +7,7 @@
 <body>
 <nav>
     <a href="/characters/new">Создать нового персонажа</a> |
+    <a href="/characters/import">Импортировать сыщика</a> |
     <a href="/characters">Просмотреть список персонажей</a>
 </nav>
 
