--- a/internal/service/assets/templates/character_details.gohtml
+++ b/internal/service/assets/templates/character_details.gohtml
@@ -8,7 +8,8 @@
 <nav>
     <a href="/">Главная</a> |
     <a href="/characters/new">Создать нового персонажа</a> |
-    <a href="/characters/list">Просмотреть список персонажей</a>
+    <a href="/characters/import">Импортировать сыщика</a>  |
+    <a href="/characters">Просмотреть список персонажей</a>
 </nav>
 
 <h1>Детали персонажа</h1>
@@ -38,6 +39,6 @@
     });
 </script>
 
-<a href="/characters/list">Вернуться к списку персонажей</a>
+<a href="/characters">Вернуться к списку персонажей</a>
 </body>
 </html>
